# OpenCL

./: main.cpp  matrix_convolution.cl
hw1/: CMakeLists.txt  main.cpp  output.txt
hw2/: CMakeLists.txt  cl.hpp  input.txt  main.cpp  prefix_sum.cl
